fix/spacing

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -9,7 +9,7 @@ $MAX_WIDTH: 1000px;
     z-index: 20;
     position: absolute;
     left: 30px;
-    top: -12px;
+    top: -3px;
   }
   .col {
     padding-top: 20px;
