--- a/src/style/info.scss
+++ b/src/style/info.scss
@@ -5,6 +5,7 @@
   align-items: flex-end;
   padding-left: 14px;
   padding-right: 24px;
+  margin-top: 10px;
 
   a {
     text-decoration: none;
